build.properties 주석